...
                                <rect key="frame" x="16" y="1" width="64" height="42"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m3l-cZ-5EC">
                                        <rect key="frame" x="15" y="4" width="35" height="35"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <state key="normal" title="Button" image="croppedprofile"/>
                                        <connections>
                                            <action selector="profileImageClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="t0A-jK-9iO"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </view>
...
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bkv-hm-54v">
                                <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r4V-UC-sQW">
                                        <rect key="frame" x="0.0" y="0.0" width="390" height="1141.3333333333333"/>
                                        <subviews>
                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="banner" translatesAutoresizingMaskIntoConstraints="NO" id="fSa-47-leB">
                                                <rect key="frame" x="0.0" y="0.0" width="390" height="226"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="226" id="eXh-AW-oWx"/>
                                                </constraints>
                                            </imageView>
                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profilephoto" translatesAutoresizingMaskIntoConstraints="NO" id="Hf9-cj-a5m">
...
