...
    
    //rounds corners of bar button item specific to its frame of 35 x 35
    //E.g. 35/50 == 0.7, so 0.7 * 25 == 17.5
    profileButton.imageView?.layer.cornerRadius = 17.5
    
    //Sets title of nav bar
    self.title = "CatBook"
    tableView.dataSource = self
    tableView.delegate = self
    
    // Loads API data and reloads tableview once completion handler is triggered
    // Takes argument of activity indicator - api func handles activity indicator stop event once completed or failed
    api.loadData(activityIndicator: activityIndicator) { ResponseData in
...
